Creación de los endpoints RegisterFarms y UpdateFarms
