# src/dto/FarmsDto/RegisterFarmsDto.ts
@@ -1,0 +1,7 @@
+export interface RegisterFarmDto {
+  userId: number;
+  farmName: string;
+  history?: string;
+  location?: string;
+  description?: string;
+}
