# src/dto/FarmsDto/UpdateFarmsDto.ts
@@ -1,0 +1,7 @@
+export interface UpdateFarmDto {
+  id: number;
+  farmName: string;
+  history?: string;
+  location?: string;
+  description?: string;
+}
